code: test di integrazione bug fix livello 2
Signed-off-by: StefanoGit50 <s.santoro41@studenti.unisa.it>