@@ -9,6 +9,7 @@ import it.unisa.Server.persistent.obj.catalogues.CatalogoClienti;
 import it.unisa.Server.persistent.obj.catalogues.CatalogoPrenotazioni;
 import it.unisa.Server.persistent.util.Stato;
 import it.unisa.Storage.DAO.CameraDAO;
+import it.unisa.Storage.DAO.ClienteDAO;
 import it.unisa.Storage.DAO.PrenotazioneDAO;
 import it.unisa.Storage.DAO.ServizioDAO;
 import it.unisa.Storage.Interfacce.FrontDeskStorage;
@@ -100,7 +101,7 @@ public class ServerCatalogoDB {
         DBPopulator.cancel();
         DBPopulator.populator();
         CatalogoPrenotazioni.aggiornalista();
-        catClienti.getListaClienti().clear();
+        CatalogoClienti.aggiornalista();
         catCamere.getListaCamere().clear();
     }
 
@@ -124,6 +125,7 @@ public class ServerCatalogoDB {
     @DisplayName("Bottom up 3.2 TC14: LV2 Test se le camere nel front desk sono le stesse nel DB ")
     @Tag("integration-LV2")
     public void getCamereTest(){
+        frontDeskStorage = new CameraDAO();
        List<Camera> c=frontDesk.getCamere();
        Collection<?> listDB= null;
 
@@ -216,53 +218,59 @@ public class ServerCatalogoDB {
     @Test
     @DisplayName("Bottom up 3.6 TC18: LV2 Test controllo dell interazione sull update fra frontdeskServer command pattern e DB")
     @Tag("integration-LV2")
-    public void updatePrenotazioneTest() throws RemoteException{
+    public void updatePrenotazioneTest() throws  CloneNotSupportedException {
         frontDeskStorage = new PrenotazioneDAO();
-        Prenotazione p2 = CatalogoPrenotazioni.getPrenotazione(prenotazione.getIDPrenotazione());
-        prenotazione.setCheckIn(true);
-        frontDesk.updatePrenotazione(prenotazione);
+        Prenotazione p3 = CatalogoPrenotazioni.getPrenotazione(1);
+        Prenotazione p2 = CatalogoPrenotazioni.getPrenotazione(1);
+        assertNotNull(p2);
+        assertNotNull(p3);
+        p2.setCheckIn(false);
+        assertDoesNotThrow(()->frontDesk.updatePrenotazione(p2));
 
-        try{
-            prenotazione= (Prenotazione) frontDeskStorage.doRetriveByKey(prenotazione.getIDPrenotazione());
-        }catch (SQLException e){
-            e.printStackTrace();
-        }
+        prenotazione= (Prenotazione) assertDoesNotThrow(()->frontDeskStorage.doRetriveByKey(p3.getIDPrenotazione()));
 
         assertNotEquals(prenotazione, p2);
-        assertNotEquals(CatalogoPrenotazioni.getPrenotazione(prenotazione.getIDPrenotazione()), p2);
+        assertNotEquals(CatalogoPrenotazioni.getPrenotazione(prenotazione.getIDPrenotazione()), p2); //verifico se il catalogo ha preso la modifica
     }
 
     @Test
     @DisplayName("Bottom up 3.7 TC19: LV2 Test controllo dell interazione sull'aggiunta del cliente fra frontdeskServer command pattern e DB")
     @Tag("integration-LV2")
     public void addClienteTest() throws RemoteException {
+        frontDeskStorage = new ClienteDAO();
         Cliente c = new Cliente("Roberto","Rossi","napoli","napoli","via manzo",12,45,"323425","M",LocalDate.of(1998,12,1),"CF234rdfcfg","luca@gmail.com","italiana",new Camera());
         frontDesk.addCliente(c);
 
-        Collection <?> clienti= new ArrayList<>();
-        try{
-            assertDoesNotThrow(()->frontDeskStorage.doRetriveByKey(c.getCf()));
-            clienti= frontDeskStorage.doRetriveAll("decrescente");
-        }catch (SQLException e ){
-            e.printStackTrace();
-        }
-        assertEquals(catClienti,clienti );
+        Collection <?> clienti;
+
+        assertDoesNotThrow(()->frontDeskStorage.doRetriveByKey(c.getCf()));
+        clienti= assertDoesNotThrow(()->frontDeskStorage.doRetriveAll("decrescente"));
+
+
+        assertTrue(CatalogoClienti.getListaClienti().contains(c));
+        assertTrue(CatalogoClienti.getListaClienti().containsAll(clienti));  // controlla se la lista passata è contenuta ed è uguale come elementi a quella expected
+
     }
 
     @Test
     @DisplayName("Bottom up 3.8 TC20: LV2 Test controllo dell interazione sulla rimozione del cliente fra frontdeskServer command pattern e DB")
     @Tag("integration-LV2")
     public void removeClienteTest() throws RemoteException {
-        frontDesk.removeCliente(cliente.getFirst());
-        Collection<?> listDB= null;
+        frontDeskStorage = new ClienteDAO();
+        assertFalse(CatalogoClienti.getListaClienti().isEmpty());
+        ArrayList<Cliente> catalogoCopia = CatalogoClienti.getListaClienti();
 
-        assertThrows(SQLException.class,()->frontDeskStorage.doRetriveByKey(cliente.getFirst()));
-        try{
-            listDB=frontDeskStorage.doRetriveAll("decrescente");
-        }catch (SQLException e){
-            e.printStackTrace();
-        }
-        assertEquals(catClienti,listDB);
+        Cliente c = CatalogoClienti.getListaClienti().get(0);
+        frontDesk.removeCliente(CatalogoClienti.getListaClienti().getFirst());
+
+        Collection<?> listDB;
+
+        assertThrows(Exception.class,()->frontDeskStorage.doRetriveByKey(c.getCf()));
+        listDB= assertDoesNotThrow(()->frontDeskStorage.doRetriveAll("decrescente"));
+
+        assertNotNull(listDB);
+        assertNotEquals(catalogoCopia, listDB);
+        assertEquals(CatalogoClienti.getListaClienti(),listDB);
     }
 
     @Test
@@ -285,8 +293,10 @@ public class ServerCatalogoDB {
     @Test
     @DisplayName("Bottom up 4.0 TC22: LV2 Test controllo dell interazione sul Ban dell utente fra frontdeskServer command pattern e DB")
     @Tag("integration-LV2")
-    public void BanClienteTest() throws RemoteException {
-        Cliente c= cliente.getFirst();
+    public void BanClienteTest() throws RemoteException, CloneNotSupportedException {
+        Cliente c= cliente.getFirst().clone();
+        cliente.getFirst().setBlacklisted(false);
+
         frontDesk.banCliente(cliente.getFirst());
         assertNotEquals(cliente.getFirst(),c);
     }
